tests/ui/traits/resolve-impl-before-constrain-check.stderr
error[E0207]: the type parameter `V` is not constrained by the impl trait, self type, or predicates
  --> $DIR/resolve-impl-before-constrain-check.rs:9:10
   |
LL |     impl<V: ?Sized> Callable for () {
   |          ^ unconstrained type parameter

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
